# holiday-notify

apps/holiday-notify-backend/: .gitignore  README.md  ex_country_info_response.json  pyproject.toml
apps/holiday-notify-backend/config/db/: .secrets.example.toml  settings.toml
apps/holiday-notify-backend/requirements/: requirements.dev.txt  requirements.txt
apps/holiday-notify-backend/src/holiday_notify/: main.py
apps/holiday-notify-backend/src/holiday_notify/core/: __init__.py  config.py
apps/holiday-notify-backend/src/holiday_notify/database/: __init__.py  db_config.py
apps/holiday-notify-backend/src/holiday_notify/domain/: __init__.py
apps/holiday-notify-backend/src/holiday_notify/domain/NagerAPI/: __init__.py  __methods.py  models.py  repository.py  schemas.py
apps/holiday-notify-backend/src/holiday_notify/domain/NagerAPI/nager_country/: __init__.py  __methods.py
apps/holiday-notify-backend/src/holiday_notify/helpers/: __init__.py
apps/holiday-notify-backend/src/holiday_notify/helpers/cache_helpers/: __init__.py  __methods.py
apps/holiday-notify-backend/src/holiday_notify/helpers/http_helpers/: __init__.py  __methods.py  cache.py
apps/holiday-notify-backend/src/holiday_notify/nager_date/: __init__.py  constants.py
apps/holiday-notify-backend/src/holiday_notify/nager_date/country/: __init__.py  __methods.py
apps/holiday-notify-backend/src/holiday_notify/nager_date/endpoints/: __endpoints.py  __enum.py  __init__.py  validators.py
apps/holiday-notify-backend/src/holiday_notify/setup/: __db.py  __init__.py  __logging.py
