[project]
name = "holiday-notify"
version = "0.1.0"
description = "API for keeping track of holidays."
authors = [
    {name = "redjax", email = "jackenyon@gmail.com"},
]
dependencies = [
    "httpx>=0.27.0",
    "hishel>=0.0.27",
    "chardet>=5.2.0",
    "pendulum>=3.0.0",
    "holidays>=0.50",
    "red-utils>=0.2.25",
    "diskcache>=5.6.3",
    "red-logging>=0.1.3",
    "pydantic>=2.7.4",
    "sqlalchemy>=2.0.30",
    "dynaconf>=3.2.5",
    "pydantic-settings>=2.3.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.4.9",
    "nox>=2024.4.15",
]
